--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,39 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         CPAN-YACSmoke-Plugin-Outlook
-version:      0.05
-version_from: lib/CPAN/YACSmoke/Plugin/Outlook.pm
-installdirs:  site
-requires:
-    Carp:                          0
-    CPAN::YACSmoke:                0.03
-    File::Basename:                0
-    Test::More:                    0
-    Win32::OLE:                    0
-    Win32::OLE::Const:             0
+--- #YAML:1.0
+name:                   CPAN-YACSmoke-Plugin-Outlook
+version:                0.06
+abstract:               Outlook mailbox list plugin for CPAN-YACSmoke
+author:
+  - Barbie <barbie@cpan.org>
 
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.25
+license:                perl
+distribution_type:      module
+installdirs:            site
+
+requires:
+  Carp:                 0
+  CPAN::YACSmoke:       0.03
+  File::Basename:       0
+  Win32::OLE:           0
+  Win32::OLE::Const:    0
+  Test::More:           0.47
+recommends:
+  Test::More:           0.47
+  Test::Pod:            1.00
+  Test::Pod::Coverage:  0.08
+  Test::YAML::Meta:     0.03
+build_requires:
+  Test::More:           0.47
+
+provides:
+  CPAN::YACSmoke::Plugin::Outlook:
+    file:     lib/CPAN/YACSmoke/Plugin/Outlook.pm
+    version:  0.06
+no_index:
+  directory:
+    - t
+    - examples
+
+meta-spec:
+   version:   1.3
+   url:       http://module-build.sourceforge.net/META-spec-v1.3.html
+generated_by: Hand 1.0
