Import of BARBIE/CPAN-YACSmoke-Plugin-Outlook-0.07 from CPAN.
gitpan-cpan-distribution: CPAN-YACSmoke-Plugin-Outlook
gitpan-cpan-version:      0.07
gitpan-cpan-path:         BARBIE/CPAN-YACSmoke-Plugin-Outlook-0.07.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                   CPAN-YACSmoke-Plugin-Outlook
-version:                0.06
+version:                0.07
 abstract:               Outlook mailbox list plugin for CPAN-YACSmoke
 author:
   - Barbie <barbie@cpan.org>
@@ -11,7 +11,6 @@ installdirs:            site
 
 requires:
   Carp:                 0
-  CPAN::YACSmoke:       0.03
   File::Basename:       0
   Win32::OLE:           0
   Win32::OLE::Const:    0
@@ -20,14 +19,14 @@ recommends:
   Test::More:           0.47
   Test::Pod:            1.00
   Test::Pod::Coverage:  0.08
-  Test::YAML::Meta:     0.03
+  Test::CPAN::Meta:     0.03
 build_requires:
   Test::More:           0.47
 
 provides:
   CPAN::YACSmoke::Plugin::Outlook:
     file:     lib/CPAN/YACSmoke/Plugin/Outlook.pm
-    version:  0.06
+    version:  0.07
 no_index:
   directory:
     - t
